Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition_Items__c/fields/Event_Condition_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Condition_Id__c</fullName>
    <label>Event Condition Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>