Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition_Items__c/fields/Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition__c</fullName>
    <label>Filter Condition</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>