Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition_Items__c/fields/Filter_Order__c.field-meta.xml
<CustomField>
    <fullName>Filter_Order__c</fullName>
    <label>Filter Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>